--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ add_executable(Kettlingur
         kettlingur.h
         thirdparty/elf.h
         disasm.c
-        shorthand.h)
+        shorthand.h
+        ee.c
+        iop.c
+        vu.c)
 
-target_compile_options(Kettlingur PUBLIC -fwrapv -g3  -fPIC -fPIE -static -static-pie)
+target_compile_options(Kettlingur PUBLIC -fwrapv -g3 -Weverything -fPIC -fPIE -static -static-pie)
+target_compile_options(Kettlingur PUBLIC -Weverything -Wno-padded -Wno-vla -Wno-reserved-id-macro -Wno-documentation-unknown-command -Wno-poison-system-directories -Wno-format-nonliteral -Wno-unsafe-buffer-usage -Wno-gnu-folding-constant)
+target_compile_options(Kettlingur PUBLIC -Wno-missing-prototypes -Wno-unused-parameter -Wno-unused-function)
